# intrico

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: circuit.rs  custom_gate.rs  grovers.rs  quantum_circuit.rs  statevector_simulator.rs
src/: lib.rs
src/circuit/: circuit.rs  mod.rs
src/core/: gate.rs  mod.rs  qubit.rs
src/qsim_core/: circuit.rs  gate.rs  mod.rs  qubit.rs
src/simulator/: mod.rs  simulator.rs
src/utility/: math.rs  mod.rs
tests/: mod.rs
tests/qsim_core/: circuit_tests.rs  gate_tests.rs  mod.rs  qubit_tests.rs
