[package]
name = "intrico"
version = "0.4.0"
edition = "2024"
description = "High-performance Quantum Computing Rust library to simulate, and visualize quantum circuits with precision and power."
authors = ["Soham Ghugare <soham.ghugare@gmail.com>"]
keywords = ["quantum-computing", "quantum-technology", "quantum-sdk", "quantum", "rust"]
categories = ["development-tools", "embedded"]
license = "MIT"
repository = "https://github.com/SohamGhugare/intrico"
readme = "README.md"

[dependencies]
rusticle = "0.4.12"
