[package]
name = "intrico"
version = "0.4.7"
edition = "2024"
description = "High-performance Quantum Computing Rust library to simulate, and visualize quantum circuits with precision and power."
authors = ["Soham Ghugare <soham.ghugare@gmail.com>"]
keywords = ["quantum-computing", "quantum-technology", "quantum-sdk", "quantum", "rust"]
categories = ["development-tools", "embedded"]
license = "Apache-2.0"
repository = "https://github.com/SohamGhugare/intrico"
readme = "README.md"

[dependencies]
rand = "0.9.1"
rusticle = "0.4.13"
